# dbt_project_bigquery

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: Problemas_utf_8.txt
models/marts/ads/: agg_ads_cpl_visita_agendada_mensual.sql  fct_ads_cost_channel.sql
models/marts/bitrix/: fct_comercial_month.sql  fct_deals_ganados.sql  fct_funnel_month.sql  fct_funnel_month_by_event_date.sql  fct_leads.sql  fct_leads_cualificados.sql  fct_visitas_agendadas.sql  fct_visitas_efectivas.sql
models/staging/bitrix/: stg_contacts.sql  stg_deals.sql  stg_deals_history.sql
models/staging/google/: stg_google_geo.sql  stg_google_stats.sql
models/staging/meta/: stg_meta.sql  stg_meta2.sql
seeds/: dim_channel.csv  dim_comercial.csv  dim_geo.csv  dim_geo_ads.csv  dim_stage_funnel.csv
