[project]
name = "bkm-dbt"
version = "0.1.0"
description = "Proyecto dbt para modelado y análisis de datos de campañas, leads y ventas en Google BigQuery"
authors = [
    {name = "Jordi Quiroga",email = "jordi@jordiquiroga.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
